removed a comma, fixed alignment, and, added a heading and typewriter for meet the team

--- a/src/components/team/team.style.css
+++ b/src/components/team/team.style.css
@@ -6,7 +6,21 @@
 
 .team-component {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.team-component h1 {
+  font-size: 36px;
+  text-align: center;
+}
+
+.team-component hr {
+  border: 1px solid whitesmoke;
+  margin: 20px 0;
+  max-width: 800px;
+  width: 100%;
 }
 
 .team-container {
@@ -16,7 +30,6 @@
   gap: var(--member-gap);
   margin-block: var(--member-gap);
   max-width: calc(3 * var(--member-width) + 2 * var(--member-gap) + 10px );
-
 }
 
 .team-member {
